<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/LoginActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.UserLoginActivity">

        <EditText
            android:id="@+id/imdb_Key"
            style="@style/EditTextStyle"
            android:hint="@string/imdb_key_hint"/>

        <Button
            android:id="@+id/continue_button"
            style="@style/LoginButton"
            android:text="@string/login_continue" />

        <ImageView
            android:id="@+id/imdbPowered_image"
            style="@style/PoweredByImage"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/login_text"
            style="@style/LoginText"
            android:text="@string/login_tagline" />

        <TextView
            android:id="@+id/textView3"
            style="@style/LoginHeader"
            android:text="@string/name" />

        <TextView
            android:id="@+id/textView4"
            style="@style/LoginSubHeader"
            android:text="@string/stage" />

        <TextView
            android:id="@+id/guest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryAccent"
            android:layout_above="@+id/imdbPowered_image"
            android:layout_centerHorizontal="true"
            android:text="Login as Guest" />
</RelativeLayout>
